[package]

name = "shiplift"
version = "0.3.2"
authors = ["softprops <d.tangren@gmail.com>"]
description = "A Rust interface for maneuvering Docker containers"
documentation = "https://softprops.github.io/shiplift"
homepage = "https://github.com/softprops/shiplift"
repository = "https://github.com/softprops/shiplift"
keywords = ["docker", "unix", "containers", "hyper", "ship"]
license = "MIT"
openssl = false

# select feature by Cargo flag:
# --cfg feature="${feature_name}"
[features]
default = [ "ssl" ]

ssl = [ "openssl", "hyper-openssl" ]
without-ssl = []

[features]
default = []
ssl = [ "openssl", "hyper-openssl"]


[dependencies]
byteorder = "1.0"
flate2 = "0.2"
hyper = "0.12"


jed = "0.1"
log = "0.3"
rustc-serialize = "0.3"
tar = "0.3"
url = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json   = "1.0"
error-chain = "0.12"
futures = "0.1"
http = "0.1"
tokio = "0.1"
tokio-codec = "0.1"
bytes = "0.4"

hyper-openssl = { version = "0.6", optional = true }
openssl = { version = "0.10", optional = true }

[target.'cfg(unix)'.dependencies]
tokio-uds = "0.2"
unix_socket = "0.5"

hyper-openssl = { version = "0.2", optional = true }
openssl = { version = "0.9", optional = true }

[dev-dependencies]
env_logger = "0.4.0"
