[package]

name = "async_docker"
version = "0.1.0"
authors = ["destruktiw"]
description = "A Rust asynchronous interface for Docker API"
homepage = "https://github.com/destruktiw/async-docker"
repository = "https://github.com/destruktiw/async-docker"
keywords = ["docker", "unix", "containers", "async", "asynchronous"]
license = "MIT"
openssl = false

# select feature by Cargo flag:
# --cfg feature="${feature_name}"
[features]
default = [ "without-ssl" ]

ssl = [ "openssl", "hyper-openssl" ]
without-ssl = []


[dependencies]
byteorder = "1.0"
flate2 = "0.2"
hyper = "0.12"


log = "0.3"
tar = "0.3"
url = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json   = "1.0"
error-chain = "0.12"
futures = "0.1"
http = "0.1"
tokio = "0.1"
tokio-codec = "0.1"
bytes = "0.4"

hyper-openssl = { version = "0.6", optional = true }
openssl = { version = "0.10", optional = true }

[target.'cfg(unix)'.dependencies]
tokio-uds = "0.2"
unix_socket = "0.5"
